# myjiggler

./: .gitignore  LICENSE  README.md  install.sh  jiggler  jiggler.py  pyproject.toml
Formula/: jiggler.rb
jiggler/: __init__.py  cli.py
